namespaces/live.cloud-platform.service.justice.gov.uk/make-recall-decision-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: make-recall-decision-preprod
  labels:
    component: "make-recall-decision-preprod"
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "making-recall-decisions"
    cloud-platform.justice.gov.uk/application: "Making a recall decision"
    cloud-platform.justice.gov.uk/owner: "Making a recall decision: making-recall-decisions-tech@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice?q=recall-decision"
    cloud-platform.justice.gov.uk/team-name: "making-recall-decision"
    cloud-platform.justice.gov.uk/review-after: ""
